# error-accumulator

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: config.yaml  requester.rs
src/: builder.rs  cons.rs  construct.rs  error.rs  lib.rs  path.rs
src/builder/: array.rs  field.rs  strukt.rs
