[package]
name = "error-accumulator"
description = "Utility to make it easier for developers to write input validation."
version = "0.1.0"
edition = "2024"
authors = ["MattesWhites"]
keywords = ["error-handling", "error"]
categories = ["rust-patterns"]
readme = "README.md"
documentation = "https://docs.rs/error-accumulator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MattesWhite/error-accumulator"

[dependencies]
thiserror = "2"

[dev-dependencies]
humantime = "2.3"
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
